# GroundSegmentationROSNode

./: CMakeLists.txt  README.md  alfa-gs_git.bb  main.cpp  package.xml
Labeler/: CMakeLists.txt  label.cpp  label.h
lib/: alfa_gs.h  alfa_node.h  alfa_pd (copy).h  utils.h
src/: alfa_gs.cpp  alfa_node.cpp  alfa_pd (copy).cpp  cloud2range_node.cpp  range2cloud_node.cpp
